@@ -71,6 +71,7 @@ ImpressCMS ChangeLog
 - Added : RTL to install process. (stranger)
 - Added : Feature #1957019: added logging hook. (dave_l)
 - Added : Hide tag, content in this tag will be hidden for anonymous users. (stranger)
+- Added: Smarty xoPageNav function (Skalpa)
 
 - Improved : The pm form to use the selected editor. (real_therplima)
 - Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
